--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "This project app helps to keep control over medical drugs researches",
   "main": "index.js",
   "scripts": {
+    "eslint:fix": "eslint src/app/ --fix",
+    "eslint": "eslint src/app/",
     "test": "jest",
     "start:client:dev": "webpack-dev-server --mode development --config webpack.config.dev.babel.js --open",
     "build": "webpack --config webpack.config.prod.babel.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run eslint"
+    }
   },
   "repository": {
     "type": "git",
@@ -40,6 +47,7 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "imagemin-webpack-plugin": "^2.4.2",
     "img-loader": "^3.0.1",
     "jest": "^24.1.0",
