--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   }
 }
