--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,6 +12,7 @@ parser: babel-eslint
 
 rules:
   indent: ["error", 4, { "SwitchCase": 1 }]
+  class-methods-use-this: ["off"]
 
 env:
   browser: true
