refact: change script name

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint:fix": "eslint src/app/ --fix",
     "eslint": "eslint src/app/",
     "test": "jest",
-    "dev": "webpack-dev-server --mode development --config webpack.config.dev.babel.js --open",
+    "start": "webpack-dev-server --mode development --config webpack.config.dev.babel.js --open",
     "build": "webpack --config webpack.config.prod.babel.js"
   },
   "husky": {
