--- a/package.json
+++ b/package.json
@@ -70,9 +70,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "i18next": "^15.0.8",
+    "i18next-browser-languagedetector": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-i18next": "^10.6.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
