--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint": "eslint src/app/",
     "test": "jest",
     "test:watch": "jest --watch",
-    "start": "webpack-dev-server --mode development --config webpack.config.dev.babel.js --open",
+    "start": "rollup --config rollup.config.dev.js",
     "build": "webpack --config webpack.config.prod.babel.js"
   },
   "husky": {
@@ -30,6 +30,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
@@ -61,6 +62,16 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "redux-mock-store": "^1.5.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-generate-html-template": "1.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-serve": "^1.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
