--- a/src/.babelrc
+++ b/src/.babelrc
@@ -5,7 +5,7 @@
       "targets": {
         "node": "current"
       },
-      "useBuiltIns": "entry"
+      // "useBuiltIns": "entry"
     }],
     "@babel/react"
   ],
