--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux-mock-store": "^1.5.3",
     "rollup": "^1.10.0",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-collect-sass": "^1.0.9",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-generate-html-template": "1.1.0",
     "rollup-plugin-json": "^4.0.0",
